Adjust image size to text and screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <img id="image" alt="Rendered text..."> <br>
+  <img id="image" alt="Rendered text..." width="100%"> <br>
   <input type="text" id="textInput" />
   <canvas id="canvas" width="200" height="100" style="display: none;"></canvas>
   <script src="script.js"></script>
