--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <img id="image" alt="Rendered text..." width="100%"> <br>
-  <input type="text" id="textInput" />
+  <input type="text" id="textInput" placeholder="Enter your text..." />
   <canvas id="canvas" width="200" height="100" style="display: none;"></canvas>
   <script src="script.js"></script>
 </body>
